# cpp_oop_template

./: CMakeLists.txt  README.md  main.cc
Helper/: SafeQueue.hh
libs/animal/: CMakeLists.txt
libs/animal/include/animal/: animal.hh
libs/animal/src/: animal.cc
libs/helper/: CMakeLists.txt
libs/helper/include/helper/: helper.hh  singleton.hh
libs/helper/src/: helper.cc
libs/sqlite/: CMakeLists.txt
libs/sqlite/include/sqlite/: sqlite.hh
libs/sqlite/src/: sqlite.cc
src/: main.cc
